AKS - Cosmos DB/aks/aad-pod-identity-validator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    aadpodidbinding: AKS_MI_NAME # Change
spec:
  containers:
  - name: demo
    image: mcr.microsoft.com/oss/azure/aad-pod-identity/demo:v1.6.3
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 250m
        memory: 256Mi
    args:
      - --subscriptionid=SUBSCRIPTION_ID # Change
      - --clientid=AKS_MI_CLIENT_ID # Change
      - --resourcegroup=AKS_NODE_RESOURCE_GROUP_NAME # Change
  nodeSelector:
    kubernetes.io/os: linux
