AKS - Cosmos DB/aks/weather-share.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-share
  labels:
    aadpodidbinding: AKS_MI_NAME # Change
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: weather-share
  template:
    metadata:
      labels:
        app: weather-share
        aadpodidbinding: AKS_MI_NAME # Change
    spec:
      containers:
      - name: weather-share
        image: ACR_NAME.azurecr.io/weather-share:latest # Change
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: weather-share
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: weather-share
